Fix content and fix footer
- Footer and content were overlaping each other
- Content wasn't centralized

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,12 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
+  /* My solution */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 50px;
 }
 
 img {
@@ -27,16 +33,10 @@ input {
 
 /* My solution starts here */
 
-
 .header, .footer{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-.footer{
-  position: absolute;
-  width: 100%;
-  bottom: 0px;
 }
 a{
   text-decoration: none;
@@ -52,4 +52,11 @@ ul{
   padding-left: 0;
   margin: 16px 40px;
   gap: 20px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px
 }
